--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html data-theme="lofi" lang="ru">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -21,9 +21,9 @@
         <div class="collapse navbar-collapse is-flex is-flex-direction-row justify-content-between align-items-center"
              id="navbarNavAltMarkup">
             <ul class="navbar-nav">
-                <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Каталог</a></li>
+                <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">Каталог</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">Отслеживание</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Контакты</a></li>
+                <li class="nav-item"><a class="nav-link" href="about.html">Контакты</a></li>
             </ul>
             <ul class="pagination mt-3">
                 <li class="page-item disabled"><button class="page-link btn-primary" href="">1</button></li>
