most of the templates ready for deploy

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <!-- HEADER -->
 <nav class="navbar fixed-top navbar-expand-lg">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#"><img id="header-image" src="static/logo-header.png"></a>
+        <a class="navbar-brand" href="index.html"><img id="header-image" src="static/logo-header.png"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -22,12 +22,13 @@
              id="navbarNavAltMarkup">
             <ul class="navbar-nav">
                 <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">Каталог</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Отслеживание</a></li>
+                <li class="nav-item"><a class="nav-link" href="tracking.html">Отслеживание</a></li>
                 <li class="nav-item"><a class="nav-link" href="about.html">Контакты</a></li>
             </ul>
             <ul class="pagination mt-3">
                 <li class="page-item disabled"><button class="page-link btn-primary" href="">1</button></li>
-                <li class="page-item"><button class="page-link btn-primary" href="">Корзина</button></li>
+                <li class="page-item"><a class="page-link btn-success text-success" href="">Корзина</a></li>
+                <li class="page-item"><a class="page-link btn-success" href="account.html">👤</a></li>
             </ul>
         </div>
     </div>
@@ -38,7 +39,7 @@
 <div id="promo-block" class="container py-5">
     <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg">
         <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
-            <h1 class="display-5 fw-bold lh-1">MASKARADA</h1>
+            <h1 style="color: #4f352d" class="display-5 fw-bold lh-1">MASKARADA</h1>
             <p class="lead">Онлайн-магазин всего на свете по лучшим ценам и с лучшими поставщиками, рекомендую, кстати</p>
         </div>
         <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg d-none d-lg-block">
@@ -54,7 +55,7 @@
         <div class="col-md-4">
 
             <!-- CARD -->
-
+            <a style="text-decoration: none; color: #323232" href="product.html">
             <div class="catalogue-card card">
                 <div class="card-image-wrapper d-flex justify-content-center align-items-center">
                     <img class="card-image" src="static/store-lorem.png">
@@ -71,6 +72,7 @@
                     </ul>
                 </div>
             </div>
+            </a>
 
             <!-- CARD -->
 
