--- a/tracking.html
+++ b/tracking.html
@@ -8,7 +8,7 @@
           integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="static/style.css">
 </head>
-<body class="is-flex is-justify-content-space-between is-flex-direction-column">
+<body class="is-flex is-justify-content-space-between is-flex-direction-column align-items-center">
 
 <!-- HEADER -->
 <nav class="navbar fixed-top navbar-expand-lg">
@@ -22,8 +22,8 @@
              id="navbarNavAltMarkup">
             <ul class="navbar-nav">
                 <li class="nav-item"><a class="nav-link" aria-current="page" href="index.html">Каталог</a></li>
-                <li class="nav-item"><a class="nav-link" href="tracking.html">Отслеживание</a></li>
-                <li class="nav-item"><a class="nav-link active" href="about.html">Контакты</a></li>
+                <li class="nav-item"><a class="nav-link active" href="tracking.html">Отслеживание</a></li>
+                <li class="nav-item"><a class="nav-link" href="about.html">Контакты</a></li>
             </ul>
             <ul class="pagination mt-3">
                 <li class="page-item disabled"><button class="page-link btn-primary" href="">1</button></li>
@@ -34,6 +34,7 @@
     </div>
 </nav>
 <!-- HEADER -->
+
 
 <!-- MAIN -->
 <div id="promo-block" class="container py-5">
@@ -50,30 +51,48 @@
     </div>
 </div>
 
-<h1 class="display-5 text-center mb-5 mt-4">Контакты</h1>
+<h1 class="display-5 text-center mb-5 mt-4">Отслеживание</h1>
+<p class="text-center">Введите номер заказа, чтобы отследить его состояние</p>
 
+<div class="container">
+    <div class="row">
+        <div class="col-md-4"></div>
+        <div class="col-md-4">
+            <label class="form-label" for="code">Код заказа</label>
+            <input class="form-control" id="code" name="code" type="text">
+            <button class="btn btn-primary mt-2" type="submit">Поиск</button>
+        </div>
+        <div class="col-md-4"></div>
+    </div>
+</div>
 
-<div class="container d-flex justify-content-center align-items-center">
-    <div class="row d-flex justify-content-center align-items-center">
-        <div class="col-6">
-            <div class="text-center">
-                <h1 style="font-size: 26px" class="fw-bold">Почта</h1>
-                <a href="mailto:hq@maskarada.ru" style="font-size: 32px; color: #323232" class="fw-light">hq@maskarada.ru</a>
+<div class="container mt-5 is-flex is-flex-direction-column justify-content-center align-items-center">
+    <div class="card">
+        <div class="card-body">
+            <div class="alert alert-success" role="alert">
+                Заказ принят | в пути | доставлен
             </div>
-            <div style="margin-top: 50px" class="text-center">
-                <h1 style="font-size: 26px" class="fw-bold">Телефон</h1>
-                <a href="tel:+79619512312" style="font-size: 32px; color: #323232" class="fw-light">+7 (961)
-                    951-23-12</a>
+            <h1 class="card-title">Заказ #22112312</h1>
+            <hr>
+            <p>Адрес доставки: г. Москва, ул. Тверская, д. 13, домофон 30</p>
+            <p>Дата заказа: 2022-03-04 12:10:01</p>
+            <hr>
+            <div class="position-block is-flex is-flex-direction-row justify-content-start align-items-start">
+                <img class="tracking-image" src="static/store-lorem.png">
+                <div class="tracking-position-info mt-2">
+                    <h5>Маска для волос</h5>
+                    <p style="color:gray;">(5 штук | 1999 руб.)</p>
+                    <p class="price-tag fw-light text-dark">9995 руб.</p>
+                </div>
             </div>
-            <div style="margin-top: 50px" class="text-center">
-                <h1 style="font-size: 26px" class="fw-bold">Адрес</h1>
-                <a href="https://yandex.ru/maps/213/moscow/house/pushkinskaya_ploshchad_5/Z04YcAdlTEwPQFtvfXt3d35jYw==/"
-                   style="font-size: 32px; color: #323232" class="fw-light">г. Москва, ул. Пушкинская площадь, д. 5</a>
-            </div>
+            <hr>
+            <h3>Итог: 9995 рублей</h3>
         </div>
     </div>
 </div>
+
 <!-- MAIN -->
+
 
 <!-- FOOTER -->
 
