--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Maskarada</title>
+    <link rel="shortcut icon" href="static/icon.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="static/style.css">
@@ -27,7 +28,7 @@
             </ul>
             <ul class="pagination mt-3">
                 <li class="page-item disabled"><button class="page-link btn-primary" href="">1</button></li>
-                <li class="page-item"><a class="page-link btn-success text-success" href="">Корзина</a></li>
+                <li class="page-item"><a class="page-link btn-success text-success" href="cart.html">Корзина</a></li>
                 <li class="page-item"><a class="page-link btn-success" href="account.html">👤</a></li>
             </ul>
         </div>
