--- a/register.html
+++ b/register.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Maskarada</title>
+    <link rel="shortcut icon" href="static/icon.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="static/style.css">
@@ -22,7 +23,7 @@
             <h2 class="mt-3">Регистрация</h2><br>
             <form action="" method="post">
                 <label class="form-label" for="mail">Почта</label><br>
-                <input class="form-control" name="mail" id="mail" type="text"><br>
+                <input class="form-control" name="mail" id="mail" type="email"><br>
                 <label class="form-label" for="pswd">Пароль</label><br>
                 <input class="form-control" name="pswd" id="pswd" type="password"><br>
                 <label class="form-label" for="pswdrpt">Повтор пароля</label><br>
