--- a/tracking.html
+++ b/tracking.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Maskarada</title>
+    <link rel="shortcut icon" href="static/icon.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="static/style.css">
@@ -26,8 +27,10 @@
                 <li class="nav-item"><a class="nav-link" href="about.html">Контакты</a></li>
             </ul>
             <ul class="pagination mt-3">
-                <li class="page-item disabled"><button class="page-link btn-primary" href="">1</button></li>
-                <li class="page-item"><a class="page-link btn-success text-success" href="">Корзина</a></li>
+                <li class="page-item disabled">
+                    <button class="page-link btn-primary" href="">1</button>
+                </li>
+                <li class="page-item"><a class="page-link btn-success text-success" href="cart.html">Корзина</a></li>
                 <li class="page-item"><a class="page-link btn-success" href="account.html">👤</a></li>
             </ul>
         </div>
@@ -37,6 +40,7 @@
 
 
 <!-- MAIN -->
+
 <div id="promo-block" class="container py-5">
     <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg">
         <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
@@ -60,7 +64,7 @@
         <div class="col-md-4">
             <label class="form-label" for="code">Код заказа</label>
             <input class="form-control" id="code" name="code" type="text">
-            <button class="btn btn-primary mt-2" type="submit">Поиск</button>
+            <button style="width: 100%" class="btn btn-primary mt-2" type="submit">Поиск</button>
         </div>
         <div class="col-md-4"></div>
     </div>
